# math-console

./: Cargo.toml  README.md
src/: error.rs  main.rs  utils.rs
src/game/: basic.rs  mod.rs
src/generator/: basic.rs  mod.rs
src/problem/: addition.rs  division.rs  mod.rs  multiplication.rs  subtraction.rs
