[package]
name = "math-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
